apps/pihole/resources/service-web.yaml
kind: Service
apiVersion: v1
metadata:
  name: pihole-web
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
    - port: 443
      targetPort: 443
      name: https
  type: ClusterIP
  # use the same ip address as used previously
  sessionAffinity: ClientIP
