apps/pihole/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/server-snippet: |
      set $do_mtls 1;
      if ($uri ~* "^/.well-known/acme-challenge/") {
        set $do_mtls 0;
      }
    nginx.ingress.kubernetes.io/auth-tls-verify-client: $do_mtls
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/spof-cert"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-error-page: "https://insult.mattbas.org/api/insult.html"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pihole.leibold.tech
      secretName: pihole-certs
  rules:
    - host: pihole.leibold.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pihole-web
                port:
                  name: http
